# SY-pher-Pad

./: .gitignore  AppRun  CHAANGELOG.md  LICENSE.md  README.md  build_appimage.sh  main.py  pyproject.toml  sy-pherpad.desktop
config/: settings_manager.py
editor/: document.py  editor_widget.py  file_manager.py
gui/: find_dialog.py  main_window.py  password_dialog.py  settings_dialog.py
gui/dialogs/: find_dialog.py  password_dialog.py  settings_dialog.py
gui/main_window/: handlers.py  menus.py  window.py
